Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -5,6 +5,7 @@
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Raleway", "Helvetica", "sans-serif";
+$base-font-serif : "Times New Roman", Times, serif;
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -26,8 +27,8 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #D23333;
 
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: #D4312D;
+$blue: #5E74ED;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
