--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -4,6 +4,7 @@
  * ------------------------------------- */
 
 // General style
+$font-family-serif        $base-font-serif
 $font-family-sans-serif:  $base-font;
 $body-bg:                 white;
 $font-size-base:          $base-size;
