Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,7 +1,7 @@
 <ul class="list-inline text-center">
   <% data.members.each do |member, value| %>
     <li>
-      <%= image_tag value.image, class: "img-circle" %>
+      <%= image_tag value.image, class: "img-circle", width: 100 %>
       <h3><%= member.capitalize %></h3>
     </li>
   <% end %>
