--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -74,6 +74,26 @@ title: Le Wagon Middleman boilerplate
     <div class="wrapper-grey padded">
       <div class="container">
       <h2 class="text-center">Your next trip</h2>
+  <div class="row">
+    <% data.flats.each do |owner, flat| %>
+    <div class="col-xs-12 col-sm-4">
+      <div class="card" style="background-image: url('<%= image_path flat.picture %>');">
+        <div class="card-category"><%= flat.city %></div>
+        <div class="card-description">
+          <h2><%= flat.name %></h2>
+          <p><%= flat.summary %></p>
+
+        </div>
+        <%= image_tag flat.owner_picture, class:"card-user avatar avatar-large" %>
+        <%= link_to "#", "flats/#{owner}.html", class: "card-link" %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
+</div>
+
+      <!-- <h2 class="text-center">Your next trip</h2>
         <div class="row">
           <div class="col-xs-12 col-sm-4">
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
@@ -110,7 +130,7 @@ title: Le Wagon Middleman boilerplate
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
       <!-- Your newsletter code -->
       <form class="form-inline text-center">
