--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -14,3 +14,110 @@
 @import "pages/*";
 @import "vendor/*";
 
+body {
+    font-family: "Open Sans", "Helvetica", "sans-serif";
+    font-size: 16px;
+    line-height: 1.4;
+    color: #333333;
+    background-color: white;
+}
+
+.header-flat {
+    border: 1px solid #dce0e0;
+}
+* {
+    box-sizing: border-box;
+}
+user agent stylesheet
+div {
+    display: block;
+}
+.header-flat form {
+    margin: 20px 0;
+    margin-right: 0;
+    background: #F4F4F4;
+    padding: 15px;
+    border-radius: 3px;
+}
+
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+.header-flat-owner {
+    padding: 20px;
+}
+.text-center {
+    text-align: center;
+}
+
+#flat-description {
+    background: #F5F5F5;
+    padding: 50px 0;
+    padding-bottom: 100px;
+    font-size: 14px;
+    color: #555555;
+}
+
+.header-flat h1 {
+    font-size: 18px;
+    margin-top: 0;
+}
+
+.header-flat-details {
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    padding-left: 0;
+}
+h1, .h1 {
+    font-size: 41px;
+}
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 22px;
+    margin-bottom: 11px;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Raleway", "Helvetica", "sans-serif";
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+}
+h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+   box-sizing: border-box;
+}
+
+
+
+
+// body {
+//  margin: 0;
+//  font-family: Open-sans, sans-serif;
+// }
+// h1, h2, h3 {
+//  font-family: Raleway, Helvetica, sans-serif;
+// }
+// h2 {
+//  font-size: 28px;
+//  font-weight: bold;
+//  margin-bottom: 30px;
+//  margin-top: 0;
+// }
+// .padded {
+//  padding: 100px 0;
+// }
+// .wrapper-grey {
+//  background: $gray-lighter;
+// }
+
+// .container h3 {
+//  font-weight: bold;
+// }
